# anomaly-detection-module

./: .gitignore  README.md  bundle-versions.json  conda-lock.yml  database.db  environment.yaml  environment.yml  pyproject.toml  server.spec
.github/workflows/: anomaly_tests.yml  build.yml  gen-docs.yml  release.yml
config/: config.ini
docs/: 01_entry_and_request.puml  02_analysis_pipeline.puml  03_detectors.puml
scripts/: fetch_gdal_bundle_win.ps1  fetch_test_data.ps1  fetch_test_data.sh
src/: main.py  server.py  sosi_convert_test.py
src/controller/image_cache_controller/: __init__.py  image_cache.py  loader.py
src/core/: ImageDiffCalc.py  MirageFinder.py  README.md  WaterDetector.py  __init__.py  artifact_detector.py  color_diff.py  gdalTest.py  line_artefact_detector.py  line_artifact_detector.py  line_detector.py  main.py  pipeline_anomaly_detection.py  printVersion.py  water_detector.py
src/domain/: README.md
src/entity/: __init__.py
src/entity/anomaly/: ProjectMetadata.py
src/entity/enums/: __init__.py  analysis_t.py
src/entity/image/: Artifact.py  Image.py  RasterMeta.py  __init__.py
src/services/anomaly_servicer/: anomaly_servicer.py
src/services/logger/: logger.py
src/services/sosi_converter_service/: __init__.py  converter.py  gdal_environment.py  sosi_converter.md
src/skavl_proto/: anomaly_pb2.py  anomaly_pb2.pyi  anomaly_pb2_grpc.py  report_pb2.py  report_pb2_grpc.py
src/utils/: __init__.py  db_connector.py  find_overlap.py  io_tools.py  load_sosi_content.py  schema.sql  string_manip.py  test_overlap.py  timer.py
tests/: test_artifact_detector.py  test_db_connector.py  test_io_tools.py  test_overlap.py  test_water_detector.py  water_detector_test_file.py
tests/manual_testing/: client.py  line_artefact_test_visualise.py  test_glare_visualise.py
tests/testdata/: convert_sosi.py  test_file_short.gpkg
