[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anomaly-detection-module"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "geopandas>=0.14",
    "shapely>=2.0",
    "scikit-image>=0.22",
    "chardet>=5.0",
    "numba>=0.59",
    "imagecodecs>=2026.1",
    "tifffile>=2026.1",
    "rasterio>=1.3",
    "opencv-python>=4.9",
    "affine>=2.4",
    "gdal"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
    "integration",
]
pythonpath = ["src"]